tweaking about page

--- a/ui/index.html
+++ b/ui/index.html
@@ -68,7 +68,7 @@
                 <p class="ui basic center aligned segment largeFont">Thank you for choosing PixelWeb!</p>
                 <p class="ui basic center aligned segment largeFont">PixelWeb is Open Source, under the MIT License and provided free of charge to all. If you paid for this software, please contact Maniacal Labs via <a href="mailto:contact@maniacallabs.com">contact@maniacallabs.com</a> to report the license violation.</p>
                 <p class="ui basic center aligned segment largeFont"></p>
-                <p class="ui basic center aligned segment largeFont">PixelWeb &copy; 2015 - Maniacal Labs / Adam Haile</p>
+                <p class="ui basic center aligned segment largeFont">PixelWeb &copy; 2015 - <a href="http://maniacallabs.com">Maniacal Labs</a> / Adam Haile</p>
 
             </div>
 
