fixing semantic install

--- a/pixelweb/ui/qs.html
+++ b/pixelweb/ui/qs.html
@@ -3,10 +3,10 @@
 <head>
     <title>PixelWeb</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <link rel="stylesheet" href="/semantic/dist/semantic.min.css">
+    <link rel="stylesheet" href="/semantic/semantic.min.css">
     <link rel="stylesheet" href="/css/qs.css">
     <script src="/js/jquery.min.js"></script>
-    <script src="/semantic/dist/semantic.min.js"></script>
+    <script src="/semantic/semantic.min.js"></script>
     <script src="/js/loglevel.min.js"></script>
     <script src="/js/core.js"></script>
     <script src="/js/api.js"></script>
