--- a/pixelweb/ui/index.html
+++ b/pixelweb/ui/index.html
@@ -64,10 +64,11 @@
         <div class="pusher" id="main_content">
             <div class="ui basic segment ui_pane" id="paneAbout">
                 <img class="ui huge centered image" src="/img/PixelWebLogo_Large.png">
-                <p class="ui basic center aligned segment largeFont"></p>
+                <p class="ui basic center aligned segment largeFont">v1.0.0 beta</p>
                 <p class="ui basic center aligned segment largeFont">Thank you for choosing PixelWeb!</p>
                 <p class="ui basic center aligned segment largeFont">PixelWeb is Open Source, under the MIT License and provided free of charge to all. If you paid for this software, please contact Maniacal Labs via <a href="mailto:contact@maniacallabs.com">contact@maniacallabs.com</a> to report the license violation.</p>
                 <p class="ui basic center aligned segment largeFont"></p>
+                <p class="ui basic center aligned segment largeFont">For more details on PixelWeb usage, please visit the <a href="http://github.com/maniacallabs/PixelWeb/wiki">PixelWeb Wiki</a>.</p>
                 <p class="ui basic center aligned segment largeFont">PixelWeb &copy; 2015 - <a href="http://maniacallabs.com">Maniacal Labs</a> / Adam Haile</p>
 
             </div>
